--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,9 +1,13 @@
-server:
-  port: 8080
 spring:
   application:
     name: eureka-server
+
+server:
+  port: 8080
+
 eureka:
   client:
-    fetch-registry: false
     register-with-eureka: false
+    fetch-registry: false
+    service-url:
+      defaultZone: http://localhost:8080/eureka
